@@ -3,6 +3,7 @@ CHANGELOG
 2.1.16
 UTIL:
 * type=address | new 'filter=(name same.as.region.predefined)'
+* class UTIL | extend if API mode - with App-id/AV/WF/Threat version info
 
 BUGFIX:
 * class Sub | bugfix for default-securiy-rules | if partial config is already available
